--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,8 @@ captures/
 .idea/modules.xml
 # Comment next line if keeping position of elements in Navigation Editor is relevant for you
 .idea/navEditor.xml
+.idea/codeStyles/Project.xml
+.idea/codeStyles/codeStyleConfig.xml
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
