--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,10 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField "String", "BASE_URL", "\"https://rickandmortyapi.com/api\""
+        }
+        debug {
+            buildConfigField "String", "BASE_URL", "\"https://rickandmortyapi.com/api\""
         }
     }
     compileOptions {
