--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,10 +22,10 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            buildConfigField "String", "BASE_URL", "\"https://rickandmortyapi.com/api\""
+            buildConfigField "String", "BASE_URL", "\"https://rickandmortyapi.com/api/\""
         }
         debug {
-            buildConfigField "String", "BASE_URL", "\"https://rickandmortyapi.com/api\""
+            buildConfigField "String", "BASE_URL", "\"https://rickandmortyapi.com/api/\""
         }
     }
     compileOptions {
@@ -71,6 +71,19 @@ dependencies {
     kapt "com.google.dagger:dagger-android-processor:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
 
+    // Coroutines
+    def coroutines_android_version = '1.3.2'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_android_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_android_version"
+
+    // ViewModel and LiveData
+    def lifecycle_version = '2.1.0'
+    def livedata_version = '2.2.0-rc02'
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$livedata_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+
+    // Glide
     def glide_version = "4.11.0"
     implementation "com.github.bumptech.glide:glide:$glide_version"
     annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
